name:                famabro
version:             0.0.1
synopsis:            My awesome stock analysis app
homepage:            https://github.com/whyisme/famapro
license:             MIT
author:              Andrew Wang
maintainer:          whyisme1987@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable famabro
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Famapro.Views.Index
  build-depends:       base ==4.7.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , text
                     , bytestring
                     , blaze-html
                     , persistent ==1.3.*
                     , persistent-template ==1.3.*
                     , persistent-sqlite ==1.3.*
                     , persistent-postgresql ==1.3.*
                     , monad-logger ==0.3.12
                     , heroku ==0.1.2.2
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
